--- a/serviceCode/services/service-recommend/src/main/resources/application.yml
+++ b/serviceCode/services/service-recommend/src/main/resources/application.yml
@@ -22,8 +22,8 @@ spring:
   redis:
     #正式环境是 0 ,本地开发使用1,避免影响正式环境
     database: 0
-    host: 122.246.0.213
-    port: 40044
+    host: localhost
+    port: 1145
     password:  #密码（默认为空
     #   auth: xx #密码（默认为空
     timeout: 6000 #连接超时时长（毫秒）
